Refactored Fifa Game related code to be cleaner
